fix: add Cloud MD text replacement variants for CLAUDE.md

--- a/config.json
+++ b/config.json
@@ -13,6 +13,9 @@
     "Colloid Code" : "Claude Code",
     "colloid code" : "claude code",
     "cloud.md" : "CLAUDE.md",
+    "Cloud MD" : "CLAUDE.md",
+    "cloud MD" : "CLAUDE.md",
+    "Cloud md" : "CLAUDE.md",
     "claw.md" : "CLAUDE.md",
     "clod.md" : "CLAUDE.md",
     "let's make a comment." : "let's make a commit.",
